samples/_failures_safe/1761397155_170425_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_83c7716b.c: In function ‘main’:
./samples/SAFE/__tmp_83c7716b.c:144:9: error: expected declaration or statement at end of input
  144 |         cleanup_context(&ctx);
      |         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_83c7716b.c:144:9: error: expected declaration or statement at end of input
